@@ -8,6 +8,6 @@ Terminal=false
 Type=Application
 Categories=GTK;Utility;
 X-GNOME-Bugzilla-Bugzilla=GNOME
-X-GNOME-Bugzilla-Product=diary
+X-GNOME-Bugzilla-Product=almanah
 X-GNOME-Bugzilla-Component=General
 StartupNotify=true
