@@ -300,8 +300,8 @@ mw_about_activate_cb (GtkAction *action, gpointer user_data)
 				"logo-icon-name", "almanah",
 				"license", license,
 				"wrap-license", TRUE,
-				"website-label", _("Diary Website"),
-				"website", "http://tecnocode.co.uk/projects/diary",
+				"website-label", _("Almanah Website"),
+				"website", "http://tecnocode.co.uk/projects/almanah",
 				NULL);
 
 	g_free (license);
